Return better SQLSTATE code when the connection has failed - rweikusat@mssgmbh.com CPAN bug #44744

--- a/Changes
+++ b/Changes
@@ -2,9 +2,12 @@
 
 2.12.1
 
-  - Fix minor Perl::Critic nags (CPAN bug #44704) (Debian #bug 521969) [GSM]
   - Ensure we always set sqlstate inside of pg_st_prepare_statement
     (CPAN bug #44732) [rweikusat@mssgmbh.com]
+  - When libpq has a connection error, return SQLSTATE 08000 ( "CONNECTION EXCEPTION" )
+    instead of the more generic 02000 ( "DATA EXCEPTION" ) (CPAN bug #44744)
+    [rweikusat@mssgmbh.com]
+  - Fix minor Perl::Critic nags (CPAN bug #44704) (Debian #bug 521969) [GSM]
 
 2.12.0 Released March 28, 2009
 
