--- a/Changes
+++ b/Changes
@@ -1,10 +1,10 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-2.13.1
+2.13.1 Released April 23, 2009
 
   - Fix leak in pg_warn (CPAN bug #45163) [rweikusat@mssgmbh.com]
 
-2.13.0 Released April 13, 2009
+2.13.0 Released April 13, 2009 (subversion r12695)
 
   - Ensure we always set sqlstate inside of pg_st_prepare_statement
     (CPAN bug #44732) [rweikusat@mssgmbh.com]
@@ -191,7 +191,7 @@
 2.7.2 Released May 14, 2008 (subversion r11269)
 
   - Handle embedded commas in quotes properly when destringifying 
-    arrays.(CPAN bug #35862) [GSM]
+    arrays. (CPAN bug #35862) [GSM]
   - Fix typo in docs with trace_parser_flags() (Martin J. Evans)
   - More testing tweaks [GSM]
 
@@ -267,7 +267,6 @@
 2.2.2 Released March 3, 2008 (subversion r10873)
 
   - Remove non-working tracing from types.c and quote.c [GSM]
-
   - Add parse_trace_flag as statement handle method. [GSM]
 
 2.2.1 Released March 1, 2008 (subversion r10865)
