--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-2.13.1 Released April 23, 2009
+2.13.1 Released April 23, 2009 (subversion r12713)
 
   - Fix leak in pg_warn (CPAN bug #45163) [rweikusat@mssgmbh.com]
 
