--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-2.13.1_1
+2.13.1_2
 
   - Make quoting of int, floats, and names much safer. (CPAN bug #41565) [GSM]
   - Return ints and bools-cast-to-number from the db as true Perlish numbers.
@@ -14,7 +14,7 @@
     (CPAN bug #45769) [GAURAV@cpan.org]
   - Improve Win32 README notes [Curtis Jewell]
   - Fix spelling error in type_info (CPAN bug #47786) [justin.d.hunter@gmail.com]
-
+  - Add functions to support MS VC++ 7.0 (CPAN bug #47858) [Taro Nishino]
 
 2.13.1 Released April 23, 2009 (subversion r12713)
 
