--- a/README
+++ b/README
@@ -1,19 +1,9 @@
 DBD::Pg  --  the DBI PostgreSQL interface for Perl
 
-===================================================
-WARNING!!
-
-THIS IS A TEST VERSION (2.14.1_1) AND SHOULD BE USED 
-FOR TESTING PURPOSES ONLY. PLEASE USE A STABLE 
-VERSION (no underscore) BY VISITING:
-
-http://search.cpan.org/dist/DBD-Pg/
-===================================================
-
 DESCRIPTION:
 ------------
 
-This is version 2.14.1_1 of DBD::Pg, the Perl interface to Postgres using DBI. 
+This is version 2.15.0 of DBD::Pg, the Perl interface to Postgres using DBI. 
 The web site for this interface, and the latest version, can be found at:
 
 	http://search.cpan.org/dist/DBD-Pg/
