--- a/TODO
+++ b/TODO
@@ -21,3 +21,4 @@ http://rt.cpan.org/Public/Dist/Display.html?Name=DBD-Pg
 - Handle unicode conversion better and perhaps eliminate the need for 
   the pg_enable_utf8 attribute.
 - Fix this: http://nntp.x.perl.org/group/perl.cpan.testers/2698430
+- Composite type support: http://www.postgresql.org/docs/current/interactive/rowtypes.html
