Update todo list.

--- a/TODO
+++ b/TODO
@@ -22,3 +22,4 @@ http://rt.cpan.org/Public/Dist/Display.html?Name=DBD-Pg
   the pg_enable_utf8 attribute.
 - Fix this: http://nntp.x.perl.org/group/perl.cpan.testers/2698430
 - Composite type support: http://www.postgresql.org/docs/current/interactive/rowtypes.html
+- Full support for execute_array, e.g. the return values
