Note revision of 2.15.1

--- a/Changes
+++ b/Changes
@@ -10,7 +10,7 @@
 
  - Fixed POD escapes (CPAN bug #51856) [FWIE@cpan.org]
 
-2.15.1 Released August 7, 2009
+2.15.1 Released August 7, 2009 (subversion r13173)
 
   - Release to fix the SIGNATURE file. [GSM]
 
