--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 'GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-2.17.0 Released April 6, 2010
+2.17.0 Released April 6, 2010 (subversion r13890)
 
   - Do not automatically ROLLBACK on a failed pg_cancel [GSM] (CPAN bug #55188)
   - Added support for new lo_import_with_oid function.
