--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 'GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
+2.17.2
+
+  - Support dequoting of hex bytea format for 9.0.
+    [Dagfinn Ilmari Mannsåker] (CPAN bug #60200).
+
 2.17.1 Released April 8, 2010
 
   - Only use lo_import_with_oid if Postgres libraries are 8.4 or better
