--- a/Changes
+++ b/Changes
@@ -4,6 +4,7 @@
 
   - Support dequoting of hex bytea format for 9.0.
     [Dagfinn Ilmari Mannsåker] (CPAN bug #60200).
+  - Fix failing test in t/04misc.t on Perl 5.12. [Eric Simon]
 
 2.17.1 Released April 8, 2010
 
