--- a/Changes
+++ b/Changes
@@ -1,15 +1,17 @@
 'GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-2.17.2
+2.17.2 Released November 12, 2010
 
   - Support dequoting of hex bytea format for 9.0.
     [Dagfinn Ilmari Mannsåker] (CPAN bug #60200).
-  - Fix failing test in t/04misc.t on Perl 5.12. [Eric Simon]
-  - Allow data_sources() to accept any case-variant of 'dbi:Pg' (CPAN bug #61574)
   - Don't PQclear on execute() if there is an active async query
     [rweikusat at mssgmbh.com] (CPAN bug #58376)
+  - Allow data_sources() to accept any case-variant of 'dbi:Pg' (CPAN bug #61574)
+  - Fix failing test in t/04misc.t on Perl 5.12. [Eric Simon]
+  - Fix for some 7.4 failing tests [Dagfinn Ilmari Mannsåker]
+  - Return bare instead of undef in test connections (CPAN bug #61574)
 
-2.17.1 Released April 8, 2010
+2.17.1 Released April 8, 2010 (subversion r13899)
 
   - Only use lo_import_with_oid if Postgres libraries are 8.4 or better
     [GSM] (CPAN bug #56363)
