--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 'GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-2.17.2 Released November 21, 2010
+2.17.2 Released November 21, 2010 (subversion r14542)
 
   - Support dequoting of hex bytea format for 9.0.
     [Dagfinn Ilmari Mannsåker] (CPAN bug #60200).
