Fix number of tests to skip when < 9.0.

--- a/Changes
+++ b/Changes
@@ -2,8 +2,10 @@
 
 2.17.3
 
-  - Fixed the number of tests to skip in t/01connect.t when the $DBI_DSN
+  - Fix the number of tests to skip in t/01connect.t when the $DBI_DSN
     environment variable lacks a database specification.
+  - Fix the number of tests to skip in t/06bytea.t when running on a version
+    of PostgreSQL lower than 9.0.
 
 2.17.2 Released November 21, 2010 (subversion r14542)
 
