--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@
 
 2.17.3
 
+  - Fix memory leak in pg_db_cancel (missing PQclear)
+    [Rainer Weikusat] (CPAN bug #63441)
   - Fix the number of tests to skip in t/01connect.t when the $DBI_DSN
     environment variable lacks a database specification.
   - Fix algorithm for skiping tests in t/06bytea.t when running on a version
