--- a/Changes
+++ b/Changes
@@ -4,6 +4,8 @@
 
   - New method for handling UTF8: partially deprecate pg_enable_utf8.
     (still in progress)
+  - Fix memory leak in handle_old_async (missing PQclear)
+    [Rainer Weikusat] (CPAN bug #63408)
   - Fix memory leak in pg_db_cancel (missing PQclear)
     [Rainer Weikusat] (CPAN bug #63441)
   - Fix the number of tests to skip in t/01connect.t when the $DBI_DSN
