--- a/Changes
+++ b/Changes
@@ -23,7 +23,8 @@
   - Fix algorithm for skipping tests in t/06bytea.t when running on a version
     of PostgreSQL lower than 9.0. [David E. Wheeler]
   - Small tweaks to get tests working when compiled against Postgres 7.4
-    (CPAN bug #61713)
+    (CPAN bug #61713) [GSM]
+  - Fix failing test when run as non-superuser [GSM] (CPAN bug #61534)
 
 2.17.2 Released November 21, 2010 (subversion r14542)
 
