--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
 'GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
 
-Version 2.18.0  Released March 28, 2011
+Version 2.18.0  Released March 28, 2011 (subversion r14081)
 
   - Thanks to 123people.com for sponsoring work on this release [GSM]
 
