--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 'GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
 
+Version 2.18.1
+
+  - Fix LANG testing issue [GSM] (CPAN bug #56705)
+
 Version 2.18.0  Released March 28, 2011 (subversion r14081)
 
   - Thanks to 123people.com for sponsoring work on this release [GSM]
