--- a/Changes
+++ b/Changes
@@ -5,6 +5,9 @@ Version 2.18.1
 
   - Fix LANG testing issue [GSM] (CPAN bug #56705)
 
+  - Fix bug when async commands issued immediately after a COPY. [GSM] (CPAN bug #68041)
+
+
 Version 2.18.0  Released March 28, 2011 (subversion r14081)
 
   - Thanks to 123people.com for sponsoring work on this release [GSM]
