--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
 'GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
 
-Version 2.18.1
+Version 2.18.1  Released May 9, 2011
 
   - Fix LANG testing issue [GSM] (CPAN bug #56705)
 
