--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 'GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
+Version ???
+
+  - Cleanup and overhaul the UTF-8 support. Use the server_encoding to 
+    determine if we set the internal utf8 flag on text from the database. 
+    Default to always doing so unless using SQL_ASCII.
+
+  - Replace pg_enable_utf8 with pg_utf8_strings [GSM]
 
   - Better error message when trying to do things post-disconnect [GSM]
 
