--- a/Changes
+++ b/Changes
@@ -8,6 +8,8 @@ Version 2.99.9_2 (will be 3.0.0)
 
   - Replace pg_enable_utf8 with pg_utf8_strings [GSM]
 
+  - Fix localized regex in test (CPAN bug #70759)
+
   - Better error message when trying to do things post-disconnect [GSM]
 
   - Switch from subversion to git. [GSM]
