--- a/TODO
+++ b/TODO
@@ -19,6 +19,8 @@ http://rt.cpan.org/Public/Dist/Display.html?Name=DBD-Pg
    supported as a server encoding (e.g. BIG5)
 - Support passing hashrefs in and out for custom types.
 - Support a flag for behind-the-scenes CURSOR to emulate partial fetches.
+- Handle unicode conversion better and perhaps eliminate the need for 
+  the pg_enable_utf8 attribute.
 - Fix this: http://nntp.x.perl.org/group/perl.cpan.testers/2698430
 - Composite type support: http://www.postgresql.org/docs/current/interactive/rowtypes.html
 - Full support for execute_array, e.g. the return values
